# IndiaDepositorySummary

./: README.md  logic.py  pyproject.toml  streamlit_app.py
