[tool.poetry]
name = "indiadepositoryparser"
version = "0.1.0"
description = ""
authors = ["Akash Sadashivapeth <akash.sadashivpeth@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pdfplumber = "^0.11.6"
streamlit = "^1.45.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
